--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,12 +24,11 @@
         android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".activities.MainActivity"
+            android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustUnspecified|stateHidden"
-            android:configChanges="orientation|keyboardHidden"
-            />
+            android:windowSoftInputMode="adjustUnspecified|stateHidden" />
         <activity
             android:name=".activities.SplashActivity"
             android:theme="@style/ColorTheme.NoActionBarWithWhiteNavi">
@@ -41,7 +40,7 @@
         </activity>
         <activity
             android:name=".activities.LoginActivity"
-            android:theme="@style/ColorTheme.NoActionBarWithWhiteNavi"></activity>
+            android:theme="@style/ColorTheme.NoActionBarWithWhiteNavi" />
         <activity
             android:name=".activities.EditProfileActivity"
             android:theme="@style/AppThemeColorfulHint.NoActionBar" />
@@ -49,7 +48,10 @@
         <service
             android:name=".SocketService"
             android:enabled="true"
-            android:exported="false"></service>
+            android:exported="false" />
+
+        <activity android:name=".activities.WebActivity">
+        </activity>
     </application>
 
 </manifest>
