添加任务聊天视图

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,8 +50,7 @@
             android:enabled="true"
             android:exported="false" />
 
-        <activity android:name=".activities.WebActivity">
-        </activity>
+        <activity android:name=".activities.WebActivity"></activity>
     </application>
 
 </manifest>
